# ror1

./: .gitignore  Cargo.toml  README.md  ROR log - 11-07-20-26-37 - from  ror.env
db_scripts/: create_lup_tables.sql  create_ror_tables.sql  create_smm_tables.sql  create_src_tables.sql  fill_lup_tables.sql
src/: error_defs.rs  errors.rs  json_models.rs  lib.rs  main.rs
src/data/: mod.rs  org_table_code.rs  src_table_code.rs  vecs.rs
src/export/: export_csv.rs  export_structs.rs  export_text.rs  mod.rs
src/import/: mod.rs  ror_data_vectors.rs  ror_table_creator.rs  ror_tables_create.rs  src_table_code.rs
src/process/: mod.rs  smm_data_storer.rs  smm_helper.rs  src_create_tables.rs  src_data_importer.rs  src_data_processor.rs  src_rmv_dup_names.rs
src/setup/: cli_reader.rs  env_reader.rs  log_helper.rs  lup_fill_tables.rs  lup_tables_create.rs  lup_tables_insert.rs  mod.rs  smm_tables_create.rs
src/startup/: env_reader.rs  log_helper.rs  mod.rs  param_checker.rs
src/summarise/: mod.rs  smm_create_tables.rs  smm_helper.rs  smm_storer.rs
src/tests/: context_table_tests.rs  ror_data_tests.rs  setup_tests.rs
src/transform/: cxt_table_creator.rs  lup_table_creator.rs  mod.rs  org_data_import.rs  org_data_reporter.rs  org_table_code.rs  smm_data_report.rs  smm_data_reporter.rs  smm_data_storer.rs  smm_helper.rs  smm_storage_helper.rs  smm_structs.rs  smm_table_creator.rs  src_data_importer.rs  src_data_processor.rs  src_data_reporter.rs  src_data_storer.rs  src_table_creator.rs  src_tables_create.rs  storage_helper.rs
tests/: ror_data_tests.rs  test_entry.rs
tests/common/: mod.rs
tests/resources/: data_access.rs  mod.rs  record_structs.rs
(+5 files in other folders)
