[package]
name = "ror1"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "chrono" ] }
tokio = { version = "1.39.3", features = ["macros", "rt"]}

dotenv = "0.15.0"
clap = { version = "4.5.4", features = ["cargo"] }

chrono = { version = "0.4", features = ["clock"] }
log = "0.4.22"
log4rs = "1.3.0"
