[package]
name = "ror1"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8.2", features = [ "runtime-tokio", "postgres", "macros", "chrono" ] }
tokio = { version = "1.42.0", features = ["macros", "rt"]}

dotenv = "0.15.0"
clap = { version = "4.5.23", features = ["cargo"] }

chrono = { version = "0.4", features = ["clock"] }
log = "0.4.22"
log4rs = "1.3.0"
