[package]
name = "ror1"
version = "0.1.0"
authors = ["Steve Canham <stevecanham@outlook.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ror1"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"

sqlx = { version = "0.8.3", features = [ "runtime-tokio", "postgres", "macros", "chrono" ] }
tokio = { version = "1.42.0", features = ["macros", "rt"]}

dotenv = "0.15.0"
clap = { version = "4.5.23", features = ["cargo"] }

chrono = { version = "0.4.39", features = ["clock"] }
log = "0.4.22"
log4rs = "1.3.0"
temp-env = { version ="0.3.6", features = ["async_closure"]}
